--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Aprendiendo a crear REST APIS",
   "main": "index.js",
   "scripts": {
-    "desarrollo": "nodemon ./index.js",
+    "dev": "nodemon ./index.js",
     "start": "node ./index.js"
   },
   "repository": {
